--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
     document.getElementById('jsonOutput').innerText = JSON.stringify(flexMessage, null, 2);
 
-    liff.init({ liffId: "YOUR_LIFF_ID" })  // ← 你之後只要替換成你的 LIFF ID 即可
+    liff.init({ liffId: "2007251349-rdRxeWm3" })
       .then(() => {
         if (!liff.isLoggedIn()) {
           liff.login();
