--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
 
   <script>
-    liff.init({ liffId: "YOUR_LIFF_ID" })
+    liff.init({ liffId: "2007251349-rdRxeWm3" })
       .then(() => {
         if (!liff.isLoggedIn()) {
           liff.login();
